--- a/mpd-front/public/index.html
+++ b/mpd-front/public/index.html
@@ -9,6 +9,8 @@
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="http://jplayer.org/latest/dist/jplayer/jquery.jplayer.min.js"></script>
+
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
@@ -21,5 +23,6 @@
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
+<div id='JPlayer'></div>
 </body>
 </html>
