--- a/mpd-front/public/index.html
+++ b/mpd-front/public/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="/webjars/jplayer/2.9.2/dist/jplayer/jquery.jplayer.min.js"></script>
 
     <script src="/webjars/react/16.9.0/umd/react.production.min.js" crossorigin></script>
-    <script src="/webjars/react-dom/16.9.0/umd/react.production.min.js" crossorigin></script>
+    <script src="/webjars/react-dom/16.9.0/umd/react-dom.production.min.js" crossorigin></script>
 
     <link crossorigin="anonymous" href="/webjars/bootstrap/3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" rel="stylesheet">
     <link crossorigin="anonymous" href="/webjars/bootstrap/3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" rel="stylesheet">
