--- a/mpd-front/public/index.html
+++ b/mpd-front/public/index.html
@@ -8,6 +8,11 @@
 
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
 
+    <!-- Carrot quest BEGIN -->
+    <script type="text/javascript">
+    !function(){function t(t,e){return function(){window.carrotquestasync.push(t,arguments)}}if("undefined"==typeof carrotquest){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="//cdn.carrotquest.io/api.min.js",document.getElementsByTagName("head")[0].appendChild(e),window.carrotquest={},window.carrotquestasync=[],carrotquest.settings={};for(var n=["connect","track","identify","auth","oth","onReady","addCallback","removeCallback","trackMessageInteraction"],a=0;a<n.length;a++)carrotquest[n[a]]=t(n[a])}}(),carrotquest.connect("34153-8a9468ebc35b7e1f3892ac5773");
+    </script>
+    <!-- Carrot quest END -->
     <script src="/webjars/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/jplayer/2.9.2/dist/jplayer/jquery.jplayer.min.js"></script>
 
